--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Getting Started"
+bibliography: packages.bib
 ---
 
 A simple bat report from minimal data demonstrating literate programming with Quarto (_the world beyond Excel_).
@@ -12,6 +13,40 @@ A simple bat report from minimal data demonstrating literate programming with Qu
 ### Install the _iBats_ Package from GitHub
 
 The `iBats` package contains functions that help with the _Data Science_ of bat survey results. To install this package use the code below in the console (see Figure ); _one line at a time_. The package is installed from GitHub.   
+```{r}
+#| echo=FALSE,  
+#| eval=FALSE
+
+
+#Automatically write R package citation entries to a `.bib` file:
+
+#knitr::write_bib(c(.packages(), 'knitr', 'shiny'), 'packages.bib')
+
+knitr::write_bib(c('base',
+                   'tidyverse',
+                   'suncalc',
+                   'ggplot2',
+                   'dplyr',
+                   'lubridate',
+                   'stringr',
+                   'broman',
+                   'knitr',
+                   'gt',
+                   'readr',
+                   'scales',
+                   'readxl',
+                   'mosaic',
+                   'kableExtra',
+                   'flextable'), 'packages.bib')
+
+#Then add `bibliography: packages.bib` to the YAML frontmatter. Now you can cite packages. For example: the R language [@R-base] is awesome. We used the **knitr** package [@R-knitr; @knitr2015] in our analysis. We also build a Shiny app [@R-shiny].
+
+```
+
+
+
+
+
 
 
 ```{r} 
@@ -26,3 +61,22 @@ devtools::install_github("Nattereri/iBats")
 ```
 
 
+## Acknowledgements
+
+These web pages were built on the shoulders of others:
+
+
+The visualisation and analysis has been undertaken in R [@R-base] using `r R.version.string`; R is an open-source statistical programming language.  
+
+This document has been produced dynamically using `knitr` [@R-knitr] and QUARTO, integrating the data, analysis and reporting. The analysis has undertaken a tidyverse approach [@tidyverse2019].  
+
+The graphics have been produced using the R package `ggplot2` [@R-ggplot2]. The `scales` [@R-scales] package improves the clarity of scales on `ggplot` graphics.
+
+The wrangling of data was undertaken with `dplyr` [@R-dplyr] and `tidyr` packages. The data in _csv_ and _Excel_ files has been imported with `readr` [@R-readr] and `readxl` [@R-readxl] packages respectivily.  The computation with dates and times has been accomplished with `lubridate` [@R-lubridate] package. Suntimes have been obtained with the `suncalc` [@R-suncalc] package.  
+
+The manipulation of text was through the `stringr` [@R-stringr] package.  Summary statistics have been produced with the `mosaic` [@R-mosaic] package. 
+
+Tables have been produced with `knitr` [@R-knitr] with `kableExtra` [@R-kableExtra], `gt` [@R-knitr] and the `flextable` [@R-flextable] packages. The `broman` [@R-broman] package provided some useful R functions. 
+
+
+## References
